# toolRenderVideo

./: .env.example  .gitignore  AI_CONTEXT.md  README.md  REMOTION_MIGRATION_PLAN.md  docker-compose.yml  package.json
apps/backend/: README.md  pyproject.toml
apps/backend/app/: __init__.py  config.py  events.py  logging_config.py  main.py  repository.py
apps/backend/app/agents/: __init__.py  base.py  content_analyzer.py  review_agent.py  storyboard_agent.py  video_creator.py
apps/backend/app/agents/prompts/: __init__.py  analyzer.py  refine.py  reviewer.py
apps/backend/app/api/: health.py  jobs.py  projects.py  uploads.py
apps/backend/app/schemas/: __init__.py  project.py  storyboard.py
apps/backend/app/services/: __init__.py  align.py  broll.py  ingest.py  jobs.py  scene_text.py  scene_types.py  skills.py  subtitle.py  text_clean.py
apps/backend/app/services/llm/: __init__.py  _json.py  base.py  claude_provider.py  factory.py  gemini_provider.py  openai_provider.py  prompts.py
apps/backend/app/services/render/: __init__.py  ffmpeg_post.py  playwright_recorder.py  remotion.py
apps/backend/app/services/tts/: __init__.py  base.py  edge_provider.py  elevenlabs_provider.py  factory.py  gtts_provider.py  openai_provider.py
apps/backend/tests/: test_health.py
apps/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: smoke.py
storage/projects/: 0672b13b-fcff-4d3f-a2c8-a248888f3f6f.json  1c9433f0-3d4a-48b0-a618-fa6128a4d047.json  235d1dac-21f1-4ad0-9a4a-2d2a4f722e95.json  4964773e-36d1-4887-9812-7ae4b7edc04d.json  4b8d52ea-5c37-416c-8fd8-6d0e767622c0.json  (+10 more)
(+10 files in other folders)
