[project]
name = "aividforge-backend"
version = "0.1.0"
description = "AIVidForge backend - FastAPI pipeline for short video generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    # Settings & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Ingest
    "trafilatura>=1.12.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "httpx>=0.27.0",
    # LLM SDKs
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.0",
    # TTS
    "edge-tts>=6.1.12",
    "gTTS>=2.5.3",
    "elevenlabs>=1.10.0",
    # Subtitle (Whisper fallback)
    "faster-whisper>=1.0.3",
    # Render
    "playwright>=1.48.0",
    "ffmpeg-python>=0.2.0",
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]
# Enable when we swap file-based repo for Postgres + Celery later.
db = [
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
]
queue = [
    "celery[redis]>=5.4.0",
    "redis>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
